css/index.css
/* ... */
.card__description {
    flex: 1 1 45%;
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    overflow: hidden;
}

.card__footnote {
    flex: 1 1 10%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    overflow: hidden;
}

.card__footer {
    flex: 1 1 10%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-align: center;
}

.footer__link:hover {
    color: var(--menu-color-hover);
}

.footer__img--card {
    width: 2rem;
    height: auto;
    vertical-align: middle;
    margin-right: 1rem;
}

/*** Contact Section ***/

#section-contact {
    width: 100%;
    height: 80svh;
}

.container--contact {
    width: fit-content;
    height: 20rem;
    border-radius: 20px;
    font-family: var(--secondary-font);
    font-optical-sizing: auto;
    font-style: normal;
    text-align: left;
    padding: 2rem;
}

.contact--text {
    margin-bottom: 1rem;
}

.contact__link {
    display: inline-block;
    margin-bottom: 3rem;
    color: inherit;
}

.contact__link:hover {
    color: var(--menu-color-hover);
}

.icon__size--contact {
    width: 2.5rem;
    height: auto;
    vertical-align: middle;
    margin-right: 1rem;
}

/*** Footer ***/

.footer {
    width: 100vw;
    max-width: 100%;
    position: fixed;
    bottom: 0;
    left: 0;
    text-align: center;
    padding: 0.5rem 0;
}

/*** Media Queries ***/

/* On screens that are 650px to 1024px (Tablets & Small Desktops) */
@media (min-width: 650px) {

    .paragraph__size--introduction {
        font-weight: 600;
        font-size: 2.5rem;
        line-height: 5rem;
    }
    
    html {
        font-size: calc(62.5% / 1.25);
    }

    /*** Header ***/

    .label__size--hamburger {
        flex: 1 1 0%;
    }

    .flex--menu {
        flex: 1 1 90%;
    }

    .menu__list--buttons {
        margin-block-start: 0;
    }

    .menu__list--buttons li {
        flex: 1 1 33.33%;
    }

    .menu__list--buttons li a {
        padding: 0.5em 1em;
    }

    .menu__list--icons {
        flex: 1;
    }

    .icon__display--hamburger {
        display: none;
    }

    /*** About, Work Experience & Education Section ***/

    #section-about {
        max-width: 900px;
    }

    .grid--experience {
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-areas: "role role type"
            "provider location date"
            "description description description"
            "technology technology technology";
    }

    .grid--experience :nth-child(1) {
        order: 1;
    }

    .grid--experience :nth-child(2) {
        order: 2;
    }

    .grid--experience :nth-child(3) {
        order: 3;
    }

    .grid--experience :nth-child(4) {
        order: 5;
    }

    .grid--experience :nth-child(5) {
        order: 4;
    }

    .grid--experience :nth-child(6) {
        order: 6;
    }

    .grid--experience :nth-child(7) {
        order: 7;
    }

    .grid__item--location {
        justify-self: center;
    }

    /*** General Selectors ***/

    .block__display--mobile {
        display: none;
    }

    .flex__display--mobile {
        display: none;
    }

    .block__display--tablet-desktop {
        display: block;
    }

    .flex__display--tablet-desktop {
        display: flex;
    }
}

/* Content driven breakpoint for screens that are larger than 815px (Tablets & Desktops) */
@media (min-width: 815px) {

    /*** Projects Section ***/

    .card {
        width: 37.3rem;
        height: 56.7rem;
        min-width: 37.3rem;
        min-height: 56.7rem;
    }

}

/* On screens that are 1024px or more (Medium & Large Desktops) */
@media (min-width: 1024px) {

    /*** Header ***/

    .flex__nav {
        align-items: center;
    }

    .flex--menu {
        flex-wrap: nowrap;
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .label__size--hamburger {
        flex: 1 1 0%;
    }

    .menu__list--buttons {
        display: flex;
        justify-content: center;
        align-items: center;
        column-gap: 4.0rem;
        flex-wrap: nowrap;
        margin-block-end: 0;
    }

    .menu__list--icons {
        flex: 0 0 15rem;
        display: flex;
        flex-direction: row-reverse;
    }

    .menu__list--buttons li {
        flex: unset;
        display: flex;
        justify-content: space-around;
    }

    .menu__list--buttons li a {
        padding: 0.25em 0.5em;
    }

    .menu__list--icons li {
        flex: 1;
    }

    .flex-introduction {
        flex-direction: row;
    }

    .heading__size--contact {
        font-size: 5.8rem;
        line-height: 7rem;
        letter-spacing: -1px;
    }

    .flex__display--mobile-tablet {
        display: none;
    }
    
    .flex__display--desktop {
        display: flex;
    }
}

/* Content driven breakpoint for screens that are larger than 1350px (Large Desktops) */
@media (min-width: 1200px) {
    html {
        font-size: 62.5%;
    }
}
/* ... */

